ancre vers pc et header fixed version mobile.

--- a/Site web/mobile.css
+++ b/Site web/mobile.css
@@ -160,6 +160,8 @@ body{
     background-image: url("lib/images/background.jpg");
     color:white;
     overflow-x: hidden;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 .flex-container  {
     display: flex;
@@ -265,6 +267,11 @@ padding-left: 2vw;
 }
 .icone-card{
     height: 20vh;
+}
+header{
+    position: relative;
+    top: 0;
+    position: fixed;
 }
 
 footer {
@@ -408,6 +415,9 @@ footer p {
     font-family: 'Montserrat';
     line-height: 1.3em;
     text-align: justify;
+    padding-bottom: 20%;
+    padding-top: 10%;
+    
 }
 .re_content #intro{
     margin-top: 2em;
@@ -484,6 +494,9 @@ padding: 1em 0em 1em 0em;
 .re_content #img_sommaire{
     display: none;
 
+}
+#re-ancre {
+    display: none !important;
 }
 
 /* #endregion Jeux-vidéos */
