--- a/Site web/style.css
+++ b/Site web/style.css
@@ -541,6 +541,19 @@ footer p {
 
 
 /* #region Jeux-vidéos */
+#re-ancre {
+    position: fixed;
+    right: 2%;
+    bottom: 15%;
+    width: 4.2vw;
+    opacity: 50%;
+    border-radius: 100%;
+    box-shadow:0 0 20px #FF00F5;
+}
+
+#re-ancre:hover {
+    opacity: 100%;
+}
 #re_insert_title{
     text-align: center;
     font-family:"Press Start 2P" ;
@@ -972,7 +985,7 @@ border-radius: 20px;
     right: 0.35%;
     bottom: 12%;
     width: 4.2vw;
-    opacity: 20%;
+    opacity: 70%;
 }
 
 #te-ancre:hover {
